--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server",
     "protocol"
   ],
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "repository": {
     "url": "http://github.com/SierraSoftworks/node-conversation"
@@ -20,7 +20,7 @@
   "scripts": {
     "test": "node test/run"
   },
-  "main": "./lib/conversation",
+  "main": "./lib/Conversation",
   "engines": {
     "node": "*"
   },
